firefox not showing sidebar fix - added left: 0

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -3,6 +3,7 @@
 .sidebar {
   position: absolute;
   top: 81px;
+  left: 0;
   height: calc(100% - 83px);
   width: 250px;
   padding: 0 20px;
